--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "4.18.2"
+    "@mikro-orm/core": "5.9.0",
+    "@mikro-orm/mongo-highlighter": "1.0.0",
+    "@mikro-orm/mongodb": "5.9.0",
+    "express": "4.18.2",
+    "mongodb": "^6.2.0",
+    "reflect-metadata": "0.1.13"
   },
   "devDependencies": {
     "@types/express": "4.17.17",
