--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -18,13 +18,15 @@
     "express": "4.18.2",
     "mongodb": "^6.2.0",
     "multer": "1.4.5-lts.1",
-    "reflect-metadata": "0.1.13"
+    "reflect-metadata": "0.1.13",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.15",
     "@types/express": "4.17.17",
     "@types/multer": "^1.4.9",
     "@types/node": "20.6.0",
+    "@types/uuid": "^9.0.7",
     "tsc-watch": "6.0.4",
     "typescript": "5.2.2"
   }
