--- a/Front-end App/DeliverItAngularProject/package.json
+++ b/Front-end App/DeliverItAngularProject/package.json
@@ -18,6 +18,8 @@
     "@angular/platform-browser": "^16.1.0",
     "@angular/platform-browser-dynamic": "^16.1.0",
     "@angular/router": "^16.1.0",
+    "bootstrap": "^3.4.1",
+    "bootstrap4-toggle": "^3.6.1",
     "normalize.css": "^8.0.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
