--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -13,17 +13,23 @@
     "@mikro-orm/core": "5.9.0",
     "@mikro-orm/mongo-highlighter": "1.0.0",
     "@mikro-orm/mongodb": "5.9.0",
+    "@types/bcryptjs": "^2.4.6",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "4.18.2",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
     "multer": "1.4.5-lts.1",
     "reflect-metadata": "0.1.13",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/express": "4.17.17",
+    "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.9",
     "@types/node": "20.6.0",
     "@types/uuid": "^9.0.7",
