--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -5,7 +5,8 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node ./dist/app.js\""
+    "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.development ./dist/app.js\"",
+    "start:prod": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.production ./dist/app.js\""
   },
   "author": "",
   "license": "ISC",
@@ -18,6 +19,7 @@
     "body-parser": "^1.20.2",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.2.0",
