--- a/Back-end App/.env.example
+++ b/Back-end App/.env.example
@@ -1,3 +1,3 @@
-DB_URL = "mongodb://localhost:27017"
-API_SERVER = "http://localhost"
+DB_URL = mongodb://localhost:27017
+API_SERVER = http://localhost
 API_PORT = 3000
