--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -6,7 +6,8 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.development ./dist/app.js\"",
-    "start:prod": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.production ./dist/app.js\""
+    "start:prod": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.production ./dist/app.js\"",
+    "test": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"cross-env NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --config=jestconfig.json\""
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "cloudinary": "^2.0.3",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.4.5",
     "express": "4.18.2",
     "jsonwebtoken": "^9.0.2",
@@ -32,10 +34,14 @@
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/express": "4.17.17",
+    "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/multer": "^1.4.9",
     "@types/node": "20.6.0",
+    "@types/supertest": "^6.0.2",
     "@types/uuid": "^9.0.7",
+    "jest": "^29.7.0",
+    "supertest": "^6.3.4",
     "tsc-watch": "6.0.4",
     "typescript": "5.2.2"
   }
