--- a/Back-end App/tsconfig.json
+++ b/Back-end App/tsconfig.json
@@ -14,6 +14,6 @@
       "emitDecoratorMetadata": true,
       "experimentalDecorators": true
     },
-    "include": ["src/**/*", "**/*.ts"],
+    "include": ["src/**/*", "**/*.ts", "src/**/*.test.ts"],
     "exclude": ["node_modules"]
   }
