--- a/Front-end App/DeliverItAngularProject/package.json
+++ b/Front-end App/DeliverItAngularProject/package.json
@@ -32,7 +32,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^16.1.4",
-    "@angular/cli": "~16.1.4",
+    "@angular/cli": "^16.1.0",
     "@angular/compiler-cli": "^16.1.0",
     "@types/jest": "^29.5.12",
     "jest": "^29.7.0",
