--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -31,6 +31,7 @@
     "uuid": "^9.0.1"
   },
   "devDependencies": {
+    "@mikro-orm/seeder": "5.9.0",
     "@types/cookie-parser": "^1.4.6",
     "@types/cors": "^2.8.15",
     "@types/express": "4.17.17",
