--- a/Back-end App/.env.example
+++ b/Back-end App/.env.example
@@ -2,3 +2,4 @@ DB_URL = mongodb://localhost:27017
 API_SERVER = http://localhost
 API_PORT = 3000
 CLOUDINARY_URL = myCloudinaryUrl
+JWT_SECRET_KEY = secret
