--- a/Back-end App/package.json
+++ b/Back-end App/package.json
@@ -6,7 +6,7 @@
   "main": "app.js",
   "scripts": {
     "start:dev": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.development ./dist/app.js\"",
-    "start:prod": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"node --env-file=./.env.production ./dist/app.js\"",
+    "start:prod": "tsc --project ./tsconfig.json && node --env-file=./.env.production ./dist/app.js",
     "test": "tsc-watch --noClear -p ./tsconfig.json --onSuccess \"cross-env NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --config=jestconfig.json\""
   },
   "author": "",
@@ -28,6 +28,8 @@
     "mongodb": "^6.2.0",
     "multer": "1.4.5-lts.1",
     "reflect-metadata": "0.1.13",
+    "swagger-jsdoc": "6.2.8",
+    "swagger-ui-express": "5.0.1",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
@@ -40,6 +42,8 @@
     "@types/multer": "^1.4.9",
     "@types/node": "20.6.0",
     "@types/supertest": "^6.0.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "4.1.7",
     "@types/uuid": "^9.0.7",
     "jest": "^29.7.0",
     "supertest": "^6.3.4",
